<resources>
    <string name="facebook_app_id">131584480776960</string>
    <string name="fb_login_protocol_scheme">fb131584480776960</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">DsQpZuWxVXdNeii1rMy98rjSp</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">icMqh1zfD9vhs3uRslXaneRMR4zWIHTeXgT4AnB5rqqaCUs3KF</string>
    <string name="server_client_id">816401657226-jq3a7du27lran3okem2j57l6jnl9q210.apps.googleusercontent.com</string>
    <string name="app_name">CastleEvent</string>
    <string name="ed_text_email">E-mail</string>
    <string name="ed_text_password">Password</string>
    <string name="tv_price_start">STARTING FROM ฿2,000.00</string>
    <string name="tv_get_tickets">GET TICKETS</string>
    <string name="tv_example_credit">Thai Best Shopping 2017</string>
    <string name="tv_header_contact">Contact</string>
    <string name="tv_status_open" translatable="false">เปิด</string>
    <string name="tv_status_close" translatable="false">ปิด</string>
    <string name="tv_count_people" translatable="false">จำนวน</string>
    <string name="tv_people" translatable="false">คน</string>
    <string name="tv_location" translatable="false">สถานที่:</string>
    <string name="tv_time" translatable="false">เวลา:</string>
    <string name="detail" translatable="false">รายละเอียด</string>
    <string name="open_drawer_layout" translatable="false">ปิด</string>
    <string name="close_drawer_layout" translatable="false">เปิด</string>
    <string name="LoginReSource" translatable="false">ล๊อคอิน</string>
    <string name="stringTestCalendar" translatable="false">25</string>
    <string name="hind">ซ่อนลิสรายการ</string>
    <string name="loginPassword">Password</string>
    <string name="loginUsername">Username</string>
    <string name="create_account">Create an account</string>
    <string name="register_phone">Phone</string>
    <string name="register_re_password">Re-Password</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_username">Name - LastName</string>
    <string name="register_confirm_register">Confirm Register</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="header_setting">Setting</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_user">User</string>
    <string name="menu_category">Category</string>
    <string name="menu_event">Event</string>
    <string name="header_profile">My Profile</string>
    <string name="hint_ed_user_name_profile">Username</string>
    <string name="hint_phone_profile">Password</string>
    <string name="hint_email_profile">E-mail</string>
    <string name="text_button_edit_profile" translatable="false">กลับสู่หน้าหลัก</string>
    <string name="cancel_dialog_logout" translatable="false">ยกเลิก</string>
    <string name="accept_dialog_logout" translatable="false">ตกลง</string>
    <string name="expiredTickets" translatable="false">ขออภัยบัตรหมดแล้วค่ะ</string>
    <string name="lessAfterDate" translatable="false">ขออภัยเลยกำหนดในการจองแล้วค่ะ</string>
    <string name="pleaseLogin" translatable="false">กรุณาเข้าสู่ระบบ</string>
    <string name="closeEvent" translatable="false">ปิดการจำหน่ายตั๋วบัตรแล้วค่ะ</string>
    <string name="my_order">My Order</string>
    <string name="contact">Contact</string>
    <string name="logout">LogOut</string>
    <string name="eng_language">Eng</string>
    <string name="thai_language">ไทย</string>
    <string name="close_notification">Close</string>
    <string name="open_notification">Open</string>
    <string name="re_password">Re-Password</string>
    <string name="upload_text">อัพโหลดรูปภาพ</string>
    <string name="accept_missing">ตกลง</string>
    <string name="categoryAll">ALL</string>
    <string name="categoryEducation">Education</string>
    <string name="categoryTechnology">Technology</string>
    <string name="categorySport">Sport</string>
    <string name="contactFont">Contact</string>
    <string name="calendarFont">Calendar</string>
    <string name="myOrderFont">My Order</string>
    <string name="myProfileFont">My Profile</string>
    <string name="event">Castle Event</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">Or SignIn With:</string>
    <string name="nameApp">Castle Event</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_favorite">My Favorite</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">BirthDay</string>
    <string name="tickets">Tickets</string>
    <string name="close_bt">Close</string>
    <string name="countPeopleTickets">People</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="next_step">Next -></string>
    <string name="success_button">Success</string>
    <string name="add_category">Add Category</string>
    <string name="no_item">No Item</string>
    <string name="skip"><![CDATA[Skip ->]]></string>
    <string name="birth_day">วันเ/เดือน/ปี</string>
    <string name="accept_bt">Accept</string>
    <string name="cancel_bt">Cancel</string>
    <string name="news_topic">New</string>
    <string name="coming_topic">Coming</string>
    <string name="expire_topic">Expire</string>
    <string name="text_search">search event here</string>
    <string name="comingTickets">Wait this event coming</string>
    <string name="expireTickets">Expire this event</string>
    <string name="comingMsg">Coming Soon…</string>
    <string name="expireMsg">Expire Event</string>
    <string name="confirm">Confirm</string>
    <string name="updateProfileSuccess">Update Complete</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="email">Email</string>

    <string-array name="CategoryFavorite">
        <item>การศึกษา</item>
        <item>กีฬา</item>
        <item>ดนตรี</item>
        <item>เทคโนโลยี</item>
        <item>สัตว์เลี้ยง</item>
        <item>งานเลี้ยง</item>
        <item>อาหาร</item>
        <item>ศิลปะ</item>
        <item>เพลง</item>
    </string-array>
</resources>
