<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    app:cardCornerRadius="12dp"
    tools:context="com.ipati.dev.castleevent.fragment.loading.SettingDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="286dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/header_setting"
            android:textColor="@color/colorFontSetting"
            android:textSize="@dimen/sizeFontNameApp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_header_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/language"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />

                <TextView
                    android:id="@+id/tv_header_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:padding="10dp"
                    android:text="@string/notification"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_thai_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_thai_language"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/thai_language"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />

                <TextView
                    android:id="@+id/tv_close_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_notification"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/close_notification"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_eng_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_eng_language"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/eng_language"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />

                <TextView
                    android:id="@+id/tv_open_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_notification"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/open_notification"
                    android:textColor="#000"
                    android:textSize="@dimen/sizeFontContent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
