<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundResource"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context="com.ipati.dev.castleevent.fragment.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/im_user_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            app:actualImageScaleType="centerCrop"
            app:fadeDuration="200"
            app:placeholderImage="@mipmap/ic_launcher"
            app:roundAsCircle="true" />

        <TextView
            android:id="@+id/tv_user_profile_name_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/circular"
            android:padding="5dp"
            android:textColor="@color/colorMenuList"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_user_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/circular"
            android:padding="5dp"
            android:textColor="@color/colorMenuList"
            android:textSize="22sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_profile_list_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/header_menu_list_user_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/circular"
            android:text="@string/header_setting"
            android:textColor="@color/colorMenuList"
            android:textSize="35sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/header_language_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/language"
                        android:textColor="@color/colorMenuList"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/notification"
                        android:textColor="@color/colorMenuList"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_header_menu_list_thai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/thai_language"
                        android:textColor="@color/colorMenuList"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_notification_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/close_notification"
                        android:textColor="@color/colorMenuList"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <Switch
                        android:id="@+id/switch_language_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />

                    <Switch
                        android:id="@+id/switch_notification_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/eng_language"
                        android:textColor="@color/colorMenuList"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular"
                        android:padding="5dp"
                        android:text="@string/open_notification"
                        android:textColor="@color/colorMenuList"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_logout_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_ripple_back_ground_button_logout"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/circular"
            android:text="@string/logout"
            android:textColor="@color/colorFontProfile"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>
