<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundResource"
    android:orientation="vertical"
    tools:context="com.ipati.dev.castleevent.fragment.MyFavoriteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header_my_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_favorite"
            android:textColor="@color/colorFontFavorite"
            android:textSize="@dimen/sizeFontHeaderMenu"
            android:textStyle="bold" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_favorite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sizeHeightCustomToolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_item"
            android:textColor="#FFF"
            android:textSize="@dimen/sizeFontNoItem"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_no_item"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="6dp"
            android:background="@drawable/ripple_add_category"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/add_category"
            android:textColor="#FFF"
            android:textSize="@dimen/sizeFontHeader"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_my_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</LinearLayout>
